--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/札/光札/Hanafuda_January_Hikari_Alt.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>花札得点計算</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/札/光札/Hanafuda_January_Hikari_Alt.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>花札得点計算</title>
+  <!-- OpenGraph タグを追加 -->
+  <meta property="og:title" content="花札得点計算" />
+  <meta property="og:description" content="花札の得点を簡単に計算できるウェブアプリ" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://takumin287877.github.io/hanafuda-tokuten/" />
+  <meta property="og:image" content="./assets/Hanafuda_January_Hikari_Alt-Ctx6h9Av.svg" />
+
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
